--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods, 1 failed,   3 passed</span>
+                    <span class="method-stats">5 methods, 2 failed,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -107,6 +107,11 @@
                         <a href="#" panel-name="suite-Suite" title="Academy.validateTitle" class="method navigator-link" hash-for-method="validateAppTitle">validateAppTitle</a> <!-- method navigator-link -->
                       </span>
                       <br/>
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="Academy.validateTitle" class="method navigator-link" hash-for-method="validateHeader">validateHeader</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                     </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
@@ -118,12 +123,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Academy.HomePage" class="method navigator-link" hash-for-method="basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)">basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="Academy.HomePage" class="method navigator-link" hash-for-method="basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)">basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Academy.HomePage" class="method navigator-link" hash-for-method="basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)">basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="Academy.HomePage" class="method navigator-link" hash-for-method="basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)">basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -155,7 +160,19 @@
                   </a> <!-- validateAppTitle -->
                   <span class="method-name">validateAppTitle</span>
                   <div class="stack-trace">java.lang.AssertionError: expected [FEATURED CO123URSES] but found [FEATURED COURSES]
-	at Academy.validateTitle.validateAppTitle(validateTitle.java:43)
+	at Academy.validateTitle.validateAppTitle(validateTitle.java:44)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
+... Removed 33 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateHeader">
+                  </a> <!-- validateHeader -->
+                  <span class="method-name">validateHeader</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [An Academy to learn Everything about Testing] but found [AN ACADEMY TO LEARN EVERYTHING ABOUT TESTING]
+	at Academy.validateTitle.validateHeader(validateTitle.java:57)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
 ... Removed 33 stack frames
 </div> <!-- stack-trace -->
@@ -186,18 +203,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)">
-                  </a> <!-- basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User) -->
-                  <span class="method-name">basePageNavigation</span>
-                  <span class="parameters">(nonrestricteduser@qw.com, 123456, Restrcited User)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)">
                   </a> <!-- basePageNavigation(restricteduser@qw.com, 456788, Non restricted user) -->
                   <span class="method-name">basePageNavigation</span>
                   <span class="parameters">(restricteduser@qw.com, 456788, Non restricted user)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)">
+                  </a> <!-- basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User) -->
+                  <span class="method-name">basePageNavigation</span>
+                  <span class="parameters">(nonrestricteduser@qw.com, 123456, Restrcited User)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -281,28 +298,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'basePageNavigation')
 data.setCell(0, 2, 'Academy.HomePage')
-data.setCell(0, 3, 6095);
+data.setCell(0, 3, 3412);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'basePageNavigation')
 data.setCell(1, 2, 'Academy.HomePage')
-data.setCell(1, 3, 4106);
+data.setCell(1, 3, 1824);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'validateAppNavBar')
 data.setCell(2, 2, 'Academy.validateNavigationBar')
-data.setCell(2, 3, 562);
+data.setCell(2, 3, 45);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'validateAppTitle')
 data.setCell(3, 2, 'Academy.validateTitle')
-data.setCell(3, 3, 273);
+data.setCell(3, 3, 28);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'validateHeader')
+data.setCell(4, 2, 'Academy.validateTitle')
+data.setCell(4, 3, 21);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -335,47 +356,53 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">basePageNavigation(nonrestricteduser@qw.com, 123456, Restrcited User)</span>
-                <span class="method-start">6024 ms</span>
+                <span class="method-start">5363 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">basePageNavigation(restricteduser@qw.com, 456788, Non restricted user)</span>
-                <span class="method-start">12137 ms</span>
+                <span class="method-start">8779 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">16254 ms</span>
+                <span class="method-start">10606 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Academy.validateTitle</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">initialize</span>
-                <span class="method-start">17287 ms</span>
+                <span class="method-start">11037 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">validateAppTitle</span>
-                <span class="method-start">25270 ms</span>
+                <span class="method-start">17832 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">validateHeader</span>
+                <span class="method-start">18399 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">26789 ms</span>
+                <span class="method-start">18904 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Academy.validateNavigationBar</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">initialize</span>
-                <span class="method-start">27355 ms</span>
+                <span class="method-start">19099 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">validateAppNavBar</span>
-                <span class="method-start">35205 ms</span>
+                <span class="method-start">26583 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">35770 ms</span>
+                <span class="method-start">26629 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
