--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -33,6 +33,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>validateHeader</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>validateAppTitle</td>
 <td>&nbsp;</td></tr>
 <tr>
