--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c7270">  <td>20/12/18 16:44:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.HomePage@63034ed1]">basePageNavigation</td> 
-  <td>main@1878225987</td>   <td></td> </tr>
-<tr bgcolor="6c7270">  <td>20/12/18 16:44:45</td>   <td>6114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.HomePage@63034ed1]">basePageNavigation</td> 
-  <td>main@1878225987</td>   <td></td> </tr>
-<tr bgcolor="6c7270">  <td>20/12/18 16:44:33</td>   <td>-6015</td> <td>&nbsp;</td><td title="&gt;&gt;HomePage.initialize()[pri:0, instance:Academy.HomePage@63034ed1]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1878225987</td>   <td></td> </tr>
-<tr bgcolor="b1f090">  <td>20/12/18 16:44:50</td>   <td>11264</td> <td>&nbsp;</td><td title="&gt;&gt;validateTitle.initialize()[pri:0, instance:Academy.validateTitle@5fa05212]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1878225987</td>   <td></td> </tr>
-<tr bgcolor="afefd5">  <td>20/12/18 16:45:01</td>   <td>21333</td> <td>&nbsp;</td><td title="&gt;&gt;validateNavigationBar.initialize()[pri:0, instance:Academy.validateNavigationBar@72209d93]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1878225987</td>   <td></td> </tr>
-<tr bgcolor="6c7270">  <td>20/12/18 16:44:49</td>   <td>10232</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:Academy.HomePage@63034ed1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1878225987</td>   <td></td> </tr>
-<tr bgcolor="b1f090">  <td>20/12/18 16:45:00</td>   <td>20766</td> <td>&nbsp;</td><td title="&lt;&lt;validateTitle.teardown()[pri:0, instance:Academy.validateTitle@5fa05212]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1878225987</td>   <td></td> </tr>
-<tr bgcolor="afefd5">  <td>20/12/18 16:45:09</td>   <td>29748</td> <td>&nbsp;</td><td title="&lt;&lt;validateNavigationBar.teardown()[pri:0, instance:Academy.validateNavigationBar@72209d93]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1878225987</td>   <td></td> </tr>
-<tr bgcolor="afefd5">  <td>20/12/18 16:45:08</td>   <td>29182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="validateNavigationBar.validateAppNavBar()[pri:0, instance:Academy.validateNavigationBar@72209d93]">validateAppNavBar</td> 
-  <td>main@1878225987</td>   <td></td> </tr>
-<tr bgcolor="b1f090">  <td>20/12/18 16:44:58</td>   <td>19247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="validateTitle.validateAppTitle()[pri:0, instance:Academy.validateTitle@5fa05212]">validateAppTitle</td> 
-  <td>main@1878225987</td>   <td></td> </tr>
+<tr bgcolor="b57386">  <td>20/12/28 12:19:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.HomePage@9fecdf1]">basePageNavigation</td> 
+  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="b57386">  <td>20/12/28 12:19:34</td>   <td>3416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.HomePage@9fecdf1]">basePageNavigation</td> 
+  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="b57386">  <td>20/12/28 12:19:25</td>   <td>-5359</td> <td>&nbsp;</td><td title="&gt;&gt;HomePage.initialize()[pri:0, instance:Academy.HomePage@9fecdf1]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="d76181">  <td>20/12/28 12:19:37</td>   <td>5675</td> <td>&nbsp;</td><td title="&gt;&gt;validateTitle.initialize()[pri:0, instance:Academy.validateTitle@742d4e15]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="f5b5e7">  <td>20/12/28 12:19:45</td>   <td>13736</td> <td>&nbsp;</td><td title="&gt;&gt;validateNavigationBar.initialize()[pri:0, instance:Academy.validateNavigationBar@ff6077]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="b57386">  <td>20/12/28 12:19:36</td>   <td>5244</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:Academy.HomePage@9fecdf1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="d76181">  <td>20/12/28 12:19:44</td>   <td>13542</td> <td>&nbsp;</td><td title="&lt;&lt;validateTitle.teardown()[pri:0, instance:Academy.validateTitle@742d4e15]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="f5b5e7">  <td>20/12/28 12:19:52</td>   <td>21266</td> <td>&nbsp;</td><td title="&lt;&lt;validateNavigationBar.teardown()[pri:0, instance:Academy.validateNavigationBar@ff6077]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="f5b5e7">  <td>20/12/28 12:19:52</td>   <td>21220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="validateNavigationBar.validateAppNavBar()[pri:0, instance:Academy.validateNavigationBar@ff6077]">validateAppNavBar</td> 
+  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="d76181">  <td>20/12/28 12:19:43</td>   <td>12469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="validateTitle.validateAppTitle()[pri:0, instance:Academy.validateTitle@742d4e15]">validateAppTitle</td> 
+  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="d76181">  <td>20/12/28 12:19:44</td>   <td>13036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="validateTitle.validateHeader()[pri:0, instance:Academy.validateTitle@742d4e15]">validateHeader</td> 
+  <td>main@1416097444</td>   <td></td> </tr>
 </table>
