--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,28 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Validating User login</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,808</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Validating title in the Page</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">8,009</td><td></td><td></td></tr>
-<tr><td><a href="#t2">App Testing</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">Validating navigation Bar</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,693</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num attn">2</th><th class="num">26,510</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">82,085</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Validating User login &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Academy.HomePage</td><td><a href="#m0">basePageNavigation</a></td><td rowspan="2">1609138174757</td><td rowspan="2">1824</td></tr><tr class="passedeven"><td><a href="#m1">basePageNavigation</a></td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Validating title in the Page &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">Academy.validateTitle</td><td><a href="#m2">validateAppTitle</a></td><td rowspan="1">1609138183810</td><td rowspan="1">28</td></tr><tr class="failedeven"><td><a href="#m3">validateHeader</a></td><td rowspan="1">1609138184377</td><td rowspan="1">21</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4" class="invisible"/></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">Validating navigation Bar &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Academy.validateNavigationBar</td><td><a href="#m4">validateAppNavBar</a></td><td rowspan="1">1609138192561</td><td rowspan="1">45</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Academy.SigninTests</td><td><a href="#m0">basePageNavigation</a></td><td rowspan="1">1609321723794</td><td rowspan="1">67739</td></tr></tbody>
 </table>
-<h2>Validating User login</h2><h3 id="m0">Academy.HomePage#basePageNavigation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>restricteduser@qw.com</td><td>456788</td><td>Non restricted user</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Academy.HomePage#basePageNavigation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>nonrestricteduser@qw.com</td><td>123456</td><td>Restrcited User</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Validating title in the Page</h2><h3 id="m2">Academy.validateTitle#validateAppTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [FEATURED CO123URSES] but found [FEATURED COURSES]
-	at Academy.validateTitle.validateAppTitle(validateTitle.java:44)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
-... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Academy.validateTitle#validateHeader</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [An Academy to learn Everything about Testing] but found [AN ACADEMY TO LEARN EVERYTHING ABOUT TESTING]
-	at Academy.validateTitle.validateHeader(validateTitle.java:57)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
-... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>App Testing</h2><h2>Validating navigation Bar</h2><h3 id="m4">Academy.validateNavigationBar#validateAppNavBar</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Academy.SigninTests#basePageNavigation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>twettest1@gmail.com</td><td>userdemo1212</td><td>Restrcited User</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
