--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70f470">  <td>20/12/18 16:42:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.HomePage@e98770d]">basePageNavigation</td> 
-  <td>main@1302725372</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>20/12/18 16:42:07</td>   <td>4501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.HomePage@e98770d]">basePageNavigation</td> 
-  <td>main@1302725372</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>20/12/18 16:41:56</td>   <td>-6654</td> <td>&nbsp;</td><td title="&gt;&gt;HomePage.initialize()[pri:0, instance:Academy.HomePage@e98770d]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1302725372</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>20/12/18 16:42:10</td>   <td>7650</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:Academy.HomePage@e98770d]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1302725372</td>   <td></td> </tr>
+<tr bgcolor="a4c865">  <td>20/12/30 15:18:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SigninTests.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.SigninTests@5c18016b]">basePageNavigation</td> 
+  <td>main@2072130509</td>   <td></td> </tr>
+<tr bgcolor="a4c865">  <td>20/12/30 15:18:33</td>   <td>-10165</td> <td>&nbsp;</td><td title="&gt;&gt;SigninTests.initialize()[pri:0, instance:Academy.SigninTests@5c18016b]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2072130509</td>   <td></td> </tr>
+<tr bgcolor="a4c865">  <td>20/12/30 15:19:51</td>   <td>67751</td> <td>&nbsp;</td><td title="&lt;&lt;SigninTests.teardown()[pri:0, instance:Academy.SigninTests@5c18016b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2072130509</td>   <td></td> </tr>
 </table>
