--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,26 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b57386">  <td>20/12/28 12:19:25</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;HomePage.initialize()[pri:0, instance:Academy.HomePage@9fecdf1]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
-<tr bgcolor="b57386">  <td>20/12/28 12:19:31</td>   <td>5359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.HomePage@9fecdf1]">basePageNavigation</td> 
-  <td>main@1416097444</td>   <td></td> </tr>
-<tr bgcolor="b57386">  <td>20/12/28 12:19:34</td>   <td>8775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.HomePage@9fecdf1]">basePageNavigation</td> 
-  <td>main@1416097444</td>   <td></td> </tr>
-<tr bgcolor="b57386">  <td>20/12/28 12:19:36</td>   <td>10603</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:Academy.HomePage@9fecdf1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
-<tr bgcolor="d76181">  <td>20/12/28 12:19:37</td>   <td>11034</td> <td>&nbsp;</td><td title="&gt;&gt;validateTitle.initialize()[pri:0, instance:Academy.validateTitle@742d4e15]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
-<tr bgcolor="d76181">  <td>20/12/28 12:19:43</td>   <td>17828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="validateTitle.validateAppTitle()[pri:0, instance:Academy.validateTitle@742d4e15]">validateAppTitle</td> 
-  <td>main@1416097444</td>   <td></td> </tr>
-<tr bgcolor="d76181">  <td>20/12/28 12:19:44</td>   <td>18395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="validateTitle.validateHeader()[pri:0, instance:Academy.validateTitle@742d4e15]">validateHeader</td> 
-  <td>main@1416097444</td>   <td></td> </tr>
-<tr bgcolor="d76181">  <td>20/12/28 12:19:44</td>   <td>18901</td> <td>&nbsp;</td><td title="&lt;&lt;validateTitle.teardown()[pri:0, instance:Academy.validateTitle@742d4e15]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
-<tr bgcolor="f5b5e7">  <td>20/12/28 12:19:45</td>   <td>19095</td> <td>&nbsp;</td><td title="&gt;&gt;validateNavigationBar.initialize()[pri:0, instance:Academy.validateNavigationBar@ff6077]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
-<tr bgcolor="f5b5e7">  <td>20/12/28 12:19:52</td>   <td>26579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="validateNavigationBar.validateAppNavBar()[pri:0, instance:Academy.validateNavigationBar@ff6077]">validateAppNavBar</td> 
-  <td>main@1416097444</td>   <td></td> </tr>
-<tr bgcolor="f5b5e7">  <td>20/12/28 12:19:52</td>   <td>26625</td> <td>&nbsp;</td><td title="&lt;&lt;validateNavigationBar.teardown()[pri:0, instance:Academy.validateNavigationBar@ff6077]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1416097444</td>   <td></td> </tr>
+<tr bgcolor="9abed8">  <td>20/12/30 14:56:58</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SigninTests.initialize()[pri:0, instance:Academy.SigninTests@3f28bd56]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1572745406</td>   <td></td> </tr>
+<tr bgcolor="9abed8">  <td>20/12/30 14:57:08</td>   <td>10300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SigninTests.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.SigninTests@3f28bd56]">basePageNavigation</td> 
+  <td>main@1572745406</td>   <td></td> </tr>
+<tr bgcolor="9abed8">  <td>20/12/30 14:57:47</td>   <td>49285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SigninTests.basePageNavigation(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:Academy.SigninTests@3f28bd56]">basePageNavigation</td> 
+  <td>main@1572745406</td>   <td></td> </tr>
+<tr bgcolor="9abed8">  <td>20/12/30 14:58:17</td>   <td>78483</td> <td>&nbsp;</td><td title="&lt;&lt;SigninTests.teardown()[pri:0, instance:Academy.SigninTests@3f28bd56]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1572745406</td>   <td></td> </tr>
 </table>
